2007-03-23  Thomas Heller  <theller@python.net>

	* Fixed: TextWrap did destroy the generated code when very long
	symbol names used were in the type library.

	* The IEnumVARIANT.Next(celt) method can now be called with
	celt != 1.  It will return a list of items then; this allows to get
	more objects at a time.

2007-03-22  Thomas Heller  <theller@python.net>

	* In comtypes.hresult, add the hex HRESULT values in comments for
	reference.

	* In comtypes.errorinfo.ReportError, use the supplied hresult
	value.

	* Improved _NewEnum client-side handling.

	* When a relative pathname to a type library is passed to
	comtypes.client.GetModule(), the pathname is now interpreted
	relative to the __file__ of the caller if this pathname actually
	exists in the filesystem.

	* Fixed several memory leaks and other problems in the BSTR
	implementation.  The previous change that requires ctypes version
	1.0.2 was backed out again because it was the wrong approach.
	
2007-01-25  Thomas Heller  <theller@python.net>

	NOTE: This comment is no longer true, see above.
	* Removed unneeded methods from comtypes.BSTR.  The resource
	management is handled by ctypes; this requires ctypes version
	1.0.2 to correctly release BSTR resources.

2007-01-19  Thomas Heller  <theller@python.net>

	* The comtypes.test package is now self contained, it does no
	longer depend on ctypes.test which may not be available.

2007-01-16  Thomas Heller  <theller@python.net>

	* comtypes.tools.tlbparser: Sort interface methods by VTable order
	(there are typeinfos that list the methods in a different order).

2007-01-11  Thomas Heller  <theller@python.net>

	* comtypes codegenerator: Do not hardcode pointer and VARIANT size
	and alignment.  This fixes code generation issues on 64-bit
	Windows.

	* comtypes.automation: Fix size of VARIANT definition for 64-bit
	Windows.

2007-01-10  Thomas Heller  <theller@python.net>

	* (Re-)Added comtypes.__version__ again, and set it to "0.3.2".
