@@ -3,6 +3,20 @@ import comtypes.automation
 import comtypes.typeinfo
 import comtypes.client
 
+from comtypes import COMError
+import comtypes.hresult as hres
+
+# These errors generally mean the property or method exists,
+# but can't be used in this context - eg, property instead of a method, etc.
+# Used to determine if we have a real error or not.
+ERRORS_BAD_CONTEXT = [
+    hres.DISP_E_MEMBERNOTFOUND,
+    hres.DISP_E_BADPARAMCOUNT,
+    hres.DISP_E_PARAMNOTOPTIONAL,
+    hres.DISP_E_TYPEMISMATCH,
+    hres.E_INVALIDARG,
+]
+
 def Dispatch(obj):
     # Wrap an object in a Dispatch instance, exposing methods and properties
     # via fully dynamic dispatch
@@ -12,10 +26,21 @@ def Dispatch(obj):
         return _Dispatch(obj)
     return obj
 
+class MethodCaller:
+    kw = dict(_invkind=comtypes.automation.DISPATCH_METHOD)
+    
+    def __init__(self, _id, _obj):
+        self._id = _id
+        self._obj = _obj
+        
+    def __call__(self, *args):
+        return self._obj._comobj.Invoke(self._id, *args, **self.kw)
+
 class _Dispatch(object):
     # Expose methods and properties via fully dynamic dispatch
     def __init__(self, comobj):
         self._comobj = comobj
+        self._ids = {} # Tiny optimization: trying not to use GetIDsOfNames more than once
 
     def __enum(self):
         e = self._comobj.Invoke(-4) # DISPID_NEWENUM
@@ -38,10 +63,22 @@ class _Dispatch(object):
     def __getattr__(self, name):
 ##        tc = self._comobj.GetTypeInfo(0).QueryInterface(comtypes.typeinfo.ITypeComp)
 ##        dispid = tc.Bind(name)[1].memid
-        dispid = self._comobj.GetIDsOfNames(name)[0]
+        dispid = self._ids.get(name)
+        if not dispid:
+            dispid = self._comobj.GetIDsOfNames(name)[0]
+            self._ids[name] = dispid
+        
         flags = comtypes.automation.DISPATCH_PROPERTYGET
-        return self._comobj.Invoke(dispid,
-                                   _invkind=flags)
+        try:
+            result = self._comobj.Invoke(dispid, _invkind=flags)
+        except COMError, (hresult, text, details):
+            if hresult in ERRORS_BAD_CONTEXT:
+                result = MethodCaller(dispid, self)
+                setattr(self, name, result)
+            else: raise
+        except: raise
+        
+        return result
 
     def __iter__(self):
         return _Collection(self.__enum())
